--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
     <header class="containertop container p-4">
         <div class="row">
-            <div class="col-10">
-                <h1 class="text-center">Cajero</h1>
+            <div class="col-10 text-center">
+                <img src="..\DATA\LOGO.png" width="250" alt="LogDefault">
                 <br>
                 <h4 class="text-center">Doble Verificacion Activada Ingrese a la Plataforma Primero</h4>
             </div>
